Расширено меню, устранен ряд багов с сохранением файла.